# game-micro-project-csc4526

./: .gitignore  CMakeLists.txt  README.md
res/: Tirades.xml  Weapons.xml
src/core/: AttackType.hpp  CMakeLists.txt  Game.cpp  RoundTarget.cpp
src/core/Entities/: Enemy.cpp  Enemy.hpp  Entity.hpp  Player.cpp  Player.hpp
src/core/FSM/: FightState.hpp  FightStateMachine.cpp  FightStateMachine.hpp  fsm.h
src/core/Factories/: Factory.cpp  Factory.h
src/core/Game/: Button.cpp  Button.hpp  Game.cpp  Game.hpp  Weapons.xml  myMain.cpp
src/core/Item/: GasconeWine.cpp  GasconeWine.hpp  InkFLask.cpp  InkFlask.cpp  InkFlask.hpp  Item.hpp  RoxanneLetter.cpp  RoxanneLetter.hpp
src/core/Others/: Button.cpp  Button.hpp  Game.cpp  Game.hpp  RoundTarget.hpp  myMain.cpp
src/core/Weapons/: Feather.cpp  Feather.h  Sword.cpp  Sword.h  Weapon.h
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  ItemTest.cpp  Makefile  RoundTargetTest.cpp  itemTest.cpp  test_factory.cpp
src/test/attacks/: AttackTest.cpp
src/test/player/: PlayerTest.cpp
src/test/weapons/: WeaponsTest.cpp
